# cruciwordo

./: .env  .env.template  .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs  puzzle_dto.rs
db/: Cargo.toml
db/src/: lib.rs  puzzle_dao.rs
generator/: Cargo.toml
generator/res/: en.dr
generator/src/: board.rs  dictionary.rs  lib.rs
spacetime_module/: Cargo.toml
spacetime_module/src/: lib.rs
src/: board.rs  dictionary.rs  main.rs
src/entities/: create_puzzle.rs  get_puzzle.rs  mod.rs
types/src/: lib.rs
