[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "2.33.0"
strum = "0.17.1"
strum_macros = "0.17.1"
lazy_static = "1.4.0"
nanoid = "0.4.0"
chrono = "0.4.39"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
skytable = "0.8.11"
dotenv = "0.15.0"
types = { path = "../types"}
db = { path = "../db"}
generator = { path = "../generator"}